complete 2/3 of the project lightCode

--- a/modernUI-tailwind-css/index.html
+++ b/modernUI-tailwind-css/index.html
@@ -376,6 +376,345 @@
           </div>
         </div>
       </section>
+
+      <!-- Pricing -->
+      <section id="pricing" class="bg-primary-light h-fit">
+        <div class="container px-16 lg:px-20 py-20">
+          <div class="text-center m-auto mb-20 md:w-1/2">
+            <h4 class="font-bold text-secondary text-2xl mb-4">Pricing</h4>
+            <h1 class="title px-8">Get In Reasonable Price</h1>
+
+            <!-- Round switch -->
+            <div class="mt-5 flex items-center justify-center gap-4">
+              <p>Bill Monthly</p>
+              <label
+                class="cursor-pointer relative inline-block w-20 h-8 rounded-full"
+              >
+                <input
+                  type="checkbox"
+                  id="toggleBtn"
+                  class="peer opacity-0 w-0 h-0"
+                />
+                <span
+                  class="absolute top-0 left-0 right-0 bottom-0 bg-primary-light border border-gray rounded-full duration-300 before:content-[''] before:absolute before:w-6 before:h-6 before:bottom-1 before:left-1 before:rounded-full before:bg-white before:duration-300 peer-checked:before:translate-x-12 peer-checked:bg-secondary"
+                ></span>
+              </label>
+              <p>Bill Anually</p>
+            </div>
+          </div>
+
+          <!-- cards -->
+          <div class="grid gap-5 md:grid-cols-2 lg:grid-cols-3 h-screen">
+            <!-- card1 -->
+            <div class="card relative h-auto w-auto">
+              <!-- front -->
+              <div
+                id="card-1-front"
+                class="front px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    20
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Basic</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+
+              <!-- back -->
+              <div
+                id="card-1-back"
+                class="rotate-y-180 back px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full absolute top-0 left-0"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    120
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Basic</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+            </div>
+
+            <!-- card2 -->
+            <div class="card relative h-auto w-auto">
+              <!-- front -->
+              <div
+                id="card-2-front"
+                class="front px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    50
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Standard</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+
+              <!-- back -->
+              <div
+                id="card-2-back"
+                class="rotate-y-180 back px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full absolute top-0 left-0"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    150
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Standard</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+            </div>
+
+            <!-- card3 -->
+            <div class="card relative h-auto w-auto">
+              <!-- front -->
+              <div
+                id="card-3-front"
+                class="front px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    100
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Premium</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+
+              <!-- back -->
+              <div
+                id="card-3-back"
+                class="rotate-y-180 back px-7 py-11 rounded-2xl border-2 border-gray h-fit w-full absolute top-0 left-0"
+              >
+                <div class="relative">
+                  <p
+                    class="text-6xl pl-2 font-bold before:content-['$'] before:absolute before:text-sm before:top-0 before:left-0"
+                  >
+                    500
+                    <span class="text-sm font-normal tracking-widest"
+                      >/per month</span
+                    >
+                  </p>
+                </div>
+
+                <div class="py-10">
+                  <h3 class="text-2xl font-bold pb-3">Premium</h3>
+                  <p class="leading-relaxed text-lg">
+                    For Beginner who want to scale business globally
+                  </p>
+                </div>
+
+                <ul class="space-y-4 pb-10 text-lg">
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Expense Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Card Management</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Instant Statistics</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Bookmark Function</span>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-bookmark text-secondary"></i>
+                    <span class="pl-4">Accounting System</span>
+                  </li>
+                </ul>
+
+                <button class="btn w-full">Get Started</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- blogs -->
+      <section id="blogs" class="bg-primary">
+        <div class="container px-16 lg:px-20 py-5">Ali</div>
+      </section>
     </main>
 
     <script src="./script.js"></script>
